Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,10 @@ steps:
 
 - task: CmdLine@2
   inputs:
-    script: 'ng --version'
+    script: |
+      npm install -g @angular/cli
+      
+      ng --version
 
 - task: Npm@1
   displayName: NPM build
