--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ steps:
   inputs:
     script: |
       npm install -g @angular/cli
-      
+      pwd
+      ls -lah
       npm run build
 
 # - task: Npm@1
