--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virava-user-management",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,13 +10,13 @@
     "test": "ng test"
   },
   "private": false,
-  "dependencies": {
-    "@angular/animations": "^15.0.0",
+  "peerDependencies": {
     "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
+    "@angular/animations": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
