--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@syncfusion/ej2-angular-grids": "^22.1.39",
+    "@syncfusion/ej2-angular-inputs": "20.2.45",
+    "@syncfusion/ej2-angular-notifications": "20.2.43",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
