--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virava-user-management",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,12 +11,12 @@
   },
   "private": false,
   "peerDependencies": {
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.0",
-    "@angular/cdk": "^15.0.0",
-    "@angular/animations": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -25,7 +25,8 @@
     "@syncfusion/ej2-angular-notifications": "20.2.43",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "ng-packagr": "^15.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
