--- a/projects/user-management/package.json
+++ b/projects/user-management/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "virava-user-management",
-  "version": "0.0.6",
+  "name": "@virava-user-management",
+  "version": "0.0.7",
   "peerDependencies": {
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
