builded the lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,12 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "virava-user-management": [
+        "dist/virava-user-management"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
