--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-library": "ng build user-management",
+    "build-library": "ng build virava-user-management",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
