--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@angular/core": "^14.2.0",
+    "@angular/cli": "^14.2.0",
     "@angular/forms": "^14.2.0",
     "@angular/material": "^14.2.0",
     "@syncfusion/ej2-angular-grids": "20.2.43",
