--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@syncfusion/ej2-angular-grids": "20.2.43",
     "@syncfusion/ej2-angular-inputs": "20.2.45",
     "@syncfusion/ej2-angular-notifications": "20.2.43",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "rxjs": "~7.5.0",
+    "typescript": "~4.8.2"
   },
   "devDependencies": {
     "ng-packagr": "^14.2.2"
