--- a/projects/virava-user-management/package.json
+++ b/projects/virava-user-management/package.json
@@ -10,7 +10,9 @@
     "@angular/material": "^14.2.0",
     "@syncfusion/ej2-angular-grids": "20.2.43",
     "@syncfusion/ej2-angular-inputs": "20.2.45",
-    "@syncfusion/ej2-angular-notifications": "20.2.43"
+    "@syncfusion/ej2-angular-notifications": "20.2.43",
+    "rxjs": "~7.5.0",
+    "typescript": "~4.8.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
