fix: pipeline yaml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,6 @@ resources:
 
 extends:
   template: pipeline-fe-library.yaml@templates
+  parameters:
+    libraryName: "virava-user-management"
+    installCommand: "install"
